@@ -1,3 +1,10 @@
+2002-08-13  Lennart Staflin  <lenst@lysator.liu.se>
+
+	* psgml-edit.el (sgml-edit-attrib-field-start,
+	sgml-edit-attrib-clear, sgml-attribute-buffer,
+	sgml-edit-attrib-specification-list): change sgml-category to
+	category.
+
 2002-05-08  Lennart Staflin  <lenst@lysator.liu.se>
 
 	* Version 1.3.0 released
